# heddle

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ISSUES.md  README.md  RELEASING.md  ROADMAP.md  glama.json  package-lock.json  package.json  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
bench/: benchmark.py  sweep.py
contracts/: HashloomError.yaml  HeddleError.yaml  LanguageAdapter.yaml  Store.yaml  contract_hash.yaml  diff_contracts.yaml  get_contract.yaml  get_dependents.yaml  impl_hash.yaml  parse_contract.yaml  put_contract.yaml  status.yaml  verification_key.yaml  verify.yaml
docs/: benchmarks.md  demo.md  getting-started.md  hosted-store.md  launch.md
examples/go-ledger/: README.md  go.mod
examples/go-ledger/contracts/: Account.yaml  BalanceByAccount.yaml  Balanced.yaml  Entry.yaml  FormatCents.yaml  PostedEntries.yaml  TotalCredits.yaml  TotalDebits.yaml
examples/go-ledger/ledger/: filters.go  filters_test.go  report.go  report_test.go  totals.go  totals_test.go  types.go  types_test.go
examples/java-payroll/: README.md  pom.xml
examples/java-payroll/contracts/: Employee.yaml  PaySlip.yaml  TimeSheet.yaml  formatCents.yaml  grossCents.yaml  netCents.yaml  overtimeHours.yaml  render.yaml  slipFor.yaml  totalNetCents.yaml  withholdingCents.yaml
examples/java-payroll/src/main/java/payroll/: Employee.java  Pay.java  PaySlip.java  Payroll.java  Tax.java  TimeSheet.java
examples/java-payroll/src/test/java/payroll/: PayTest.java  PayrollTest.java  TaxTest.java  TypesTest.java
examples/sales/: README.md
examples/sales/contracts/: Customer.yaml  Product.yaml  Region.yaml  Sale.yaml  average_sale.yaml  customers_by_segment.yaml  included_sales.yaml  revenue_by_category.yaml  revenue_by_customer.yaml  revenue_by_product.yaml  revenue_by_region.yaml  revenue_by_segment.yaml  revenue_share_by_region.yaml  sale_count_by_region.yaml  sales_in_region.yaml  sales_over.yaml  segment_revenue_share.yaml  top_customers.yaml  top_products.yaml  total_revenue.yaml
examples/sales/src/: customers.py  filters.py  metrics.py  products.py  types.py
examples/sales/tests/: test_customers.py  test_filters.py  test_metrics.py  test_products.py  test_types.py
examples/ts-cart/: README.md  package.json
src/hashloom/: __init__.py  api.py  cache_server.py  cli.py  config.py  contract.py  errors.py  implhash.py  indexer.py  project.py  remote.py  server.py  shared.py  store.py  verify.py
src/hashloom/langs/: __init__.py  go.py  hashloom-init.gradle  java.py  python.py  typescript.py
src/hashloom/langs/gohash/: go.mod  main.go
src/hashloom/langs/javahash/: JavaHash.java
src/hashloom/langs/tshash/: main.js
src/heddle/: __init__.py  api.py  cli.py  config.py  contract.py  errors.py  implhash.py  indexer.py  project.py  server.py  store.py  tokens.py  verify.py
src/heddle/langs/: __init__.py  go.py  heddle-init.gradle  java.py  python.py  typescript.py
src/heddle/langs/javahash/: JavaHash.java
tests/: conftest.py  test_cli.py  test_concurrency.py  test_contract_hash.py  test_go_adapter.py  test_graphify_import.py  test_implhash.py  test_interpreter.py  test_java_adapter.py  test_langs_seam.py  test_mcp_e2e.py  test_namespacing.py  test_pycache.py  test_remote_store.py  test_semantic_diff.py  test_shared_store.py  test_store_and_api.py  test_toolchain_key.py  test_typescript_adapter.py  test_verify.py
