[project]
name = "heddle"
version = "0.1.0"
description = "Hash-keyed verification caching and content-addressed contracts for spec-driven development, over MCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Dave T" }]
keywords = ["mcp", "spec-driven", "agents", "caching", "contracts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
    "pytest>=8.0",
]

[project.scripts]
heddle = "heddle.cli:main"

[project.urls]
Homepage = "https://github.com/davet47/heddle"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heddle"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: spawns the real stdio server"]
