[project]
name = "hashloom"  # PyPI distribution name — bare; import name and CLI match
dynamic = ["version"]  # single-sourced from src/hashloom/__init__.py
description = "Content-addressed contracts with a hash-keyed verification cache for spec-driven agent loops, over MCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Dave T" }]
keywords = ["mcp", "spec-driven", "agents", "caching", "contracts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
    "pytest>=8.0",
]

[project.scripts]
hashloom = "hashloom.cli:main"
hashloom-mcp = "hashloom.cli:serve_main"  # serve shim: Docker ENTRYPOINT + direct uvx target; registry launches use `uvx hashloom serve` via packageArguments

[project.urls]
Homepage = "https://github.com/davet47/hashloom"
Repository = "https://github.com/davet47/hashloom"
Issues = "https://github.com/davet47/hashloom/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/hashloom/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hashloom"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: spawns the real stdio server"]
